--- a/pages/primera.html
+++ b/pages/primera.html
@@ -12,7 +12,7 @@
      <!-- Menu desplegable -->
      <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Primera División</a>
+          <a class="navbar-brand" href="#">PRIMERA DIVISIÓN</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -64,7 +64,7 @@
         <h6>(Campeón)</h6>
       </div>
 
-        <table>
+        <table class="tabla">
           <tr class="encabezado">
             <th>#</th>
             <th>Equipo</th>
@@ -186,11 +186,89 @@
             <th>PTS</th>
           </tr>
         </table>
+
+        <div>
+          <table class="tabla">
+            <tr>
+              <th>14:00</th>
+              <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Federacion.png" alt="">Social</th>
+              <th class="marcador">0</th>
+              <th class="marcador">0</th>
+              <th><img class="img-tabla" src="../img/Club-Atletico-Estudiantes.png" alt="">Estudiantes</th>
+              <th>-cancha-</th>
+            </tr>
+            <tr>
+              <th>14:00</th>
+              <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
+              <th class="marcador">0</th>
+              <th class="marcador">0</th>
+              <th><img class="img-tabla" src="../img/Club-Deportivo-Colonia-Alemana.png" alt="">Col. Alemana</th>
+              <th>-cancha-</th>
+            </tr>
+            <tr>
+              <th>14:00</th>
+              <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Almafuerte.png" alt="">Almafuerte</th>
+              <th class="marcador">0</th>
+              <th class="marcador">0</th>
+              <th><img class="img-tabla" src="../img/Asociacion-Vecinal-Ex-Emplazamiento.png" alt="">Vecinal</th>
+              <th>-cancha-</th>
+            </tr>
+            <tr>
+              <th>14:00</th>
+              <th><img class="img-tabla" src="../img/Club-Deportivo-America.png" alt="">America</th>
+              <th class="marcador">0</th>
+              <th class="marcador">0</th>
+              <th><img class="img-tabla" src="../img/Club-Deportivo-Cosmos.png" alt="">Cosmos</th>
+              <th>-cancha-</th>
+            </tr>
+          </table>
+          <table class="equipo-libre">
+            <tr>
+              <th>Libre -equipo-</th>
+            </tr>
+          </table>
+        </div>
+
+        <div>
+          <div class="gol-titulo"><p class="parrafo">GOLEADOR</p></div>
+          <table class="goleador">
+            <tr class="tabla-gol">
+              <th class="posi-1">1</th>
+              <th class="posi-1"><img class="img-tabla" src="../img/Club-Deportivo-America.png" alt="">rifmc</th>
+              <th class="posi-1">10</th>
+            </tr>
+            <tr>
+              <th>2</th>
+              <th><img class="img-tabla" src="../img/Club-Deportivo-Cosmos.png" alt="">rifmc</th>
+              <th>7</th>
+            </tr>
+            <tr>
+              <th>3</th>
+              <th><img class="img-tabla" src="../img/Asociacion-Vecinal-Ex-Emplazamiento.png" alt="">rifmc</th>
+              <th>6</th>
+            </tr>
+            <tr>
+              <th>4</th>
+              <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Federacion.png" alt="">rifmc</th>
+              <th>4</th>
+            </tr>
+            <tr>
+              <th>5</th>
+              <th><img class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">rifmc</th>
+              <th>3</th>
+            </tr>
+          </table>
+        </div>
     
       
-      <!--<footer>
-        <img class="fot" src="../img/IMG-20230604-WA0020.jpg" alt=""><img class="fot" src="../img/Liga_Federaense_de_Fútbol.png" alt=""> <p class="par">Lorem ipsum dolor sit</p>
-      </footer> -->
+      <footer>
+        <div class="div-pie">
+        <p class="pie-pagina">Contactanos por nuestras redes</p> <a href=""><img class="fot" src="../img/whatsapp-1.jpg" alt=""></a><a href=""><img class="fot" src="../img/Facebook-Logo-Square-768x768-1.png" alt=""></a><a href=""><img  class="fot" src="../img/new-instagram-logo-png-transparent-light.png" alt=""></a>
+      </div>
+      <div>
+        <span class="copyright">Todos Los Derechos Reservados © 2023 ADN</span>
+      </div>
+      </footer> 
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
