--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/0Yo_3it7_400x400-ConvertImage.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>ADN Federación</title>
 </head>
@@ -57,10 +58,10 @@
       <div id="carouselExample" class="carousel slide" style="margin-top: 70px;">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/cancha-social-federacion.jpg" class="d-block" style="width: 800px; height: 400px;" alt="...">
+            <img class="img-carousel" src="img/cancha-social-federacion.jpg" class="d-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block w-100" alt="...">
+            <img class="img-carousel" src="img/descarga.jfif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="" class="d-block w-100" alt="...">
@@ -74,7 +75,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div> 
+      </div>
 
       <div class="escudos">
         <div class="div">
@@ -106,9 +107,14 @@
         </div>
       </div>
  
-    <!--<footer>
-      <img class="fot" src="img/IMG-20230604-WA0020.jpg" alt=""><img class="fot" src="img/Liga_Federaense_de_Fútbol.png" alt=""> <p class="par">Lorem ipsum dolor sit</p>
-    </footer> -->
+      <footer>
+        <div class="div-pie">
+        <p class="pie-pagina">Contactanos por nuestras redes</p> <a href=""><img class="fot" src="../img/whatsapp-1.jpg" alt=""></a><a href=""><img class="fot" src="../img/Facebook-Logo-Square-768x768-1.png" alt=""></a><a href=""><img  class="fot" src="../img/new-instagram-logo-png-transparent-light.png" alt=""></a>
+      </div>
+      <div>
+        <span class="copyright">Todos Los Derechos Reservados © 2023 ADN</span>
+      </div>
+      </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
