--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
                   <a class="nav-link active" aria-current="page" href="pages/sub-23.html">Sub-23</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="pages/3ra.html">3ra división</a>
+                  <a class="nav-link active" aria-current="page" href="pages/3ra.html">Sub-17 división</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="pages/4ta.html">4ta división</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="pages/5ta.html">5ta división</a>
+                  <a class="nav-link active" aria-current="page" href="pages/4ta.html">Sub-13 división</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/6ta.html">6ta división</a>
