--- a/pages/primera.html
+++ b/pages/primera.html
@@ -34,13 +34,10 @@
                     <a class="nav-link active" aria-current="page" href="sub-23.html">Sub-23</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="3ra.html">3ra división</a>
+                    <a class="nav-link active" aria-current="page" href="3ra.html">Sub-17 división</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="4ta.html">4ta división</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="5ta.html">5ta división</a>
+                    <a class="nav-link active" aria-current="page" href="4ta.html">Sub-13 división</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="6ta.html">6ta división</a>
@@ -64,7 +61,8 @@
         <img class="caja-img" src="../img/img.png" alt="">
         <h6>(Campeón)</h6>
       </div>
-
+      <div class="conteiner">
+        <div>
         <table class="tabla">
           <tr class="encabezado">
             <th>#</th>
@@ -186,9 +184,8 @@
             <th>DIF</th>
             <th>PTS</th>
           </tr>
-        </table>
+        </table> 
 
-        <div>
           <table class="tabla">
             <tr>
               <th>14:00</th>
@@ -225,10 +222,25 @@
           </table>
           <table class="equipo-libre">
             <tr>
-              <th>Libre -equipo-</th>
+              <th>Libre <img  class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">  Policial</th>
             </tr>
           </table>
         </div>
+
+        <div class="conteiner-tabla">
+          <div>
+            <div class="cruces"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+            <div class="cruces-caja"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+          </div>
+          <div>
+            <div class="cruces-2" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+            <div class="cruces-caja-2" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+          </div>
+          <div>
+            <div class="cruces-3" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+          </div>
+        </div>
+      </div>
 
         <div>
           <div class="gol-titulo"><p class="parrafo">GOLEADOR</p></div>
