mejora de pagina

--- a/pages/primera.html
+++ b/pages/primera.html
@@ -230,14 +230,14 @@
         <div class="conteiner-tabla">
           <div>
             <div class="cruces"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
-            <div class="cruces-caja"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
-          </div>
+            <div class="cruces-caja"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
+          </div> <div><div class="conector"></div><div class="conector-3"></div></div>   <div><div class="conector-2"></div> <div class="conector-4"></div></div>
           <div>
-            <div class="cruces-2" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
-            <div class="cruces-caja-2" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
-          </div>
-          <div>
-            <div class="cruces-3" style="margin-left: 50px;"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
+            <div class="cruces-2"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
+            <div class="cruces-caja-2"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
+          </div> <div class="conector-5"></div> <div class="conector-6"></div>
+          <div> 
+            <div class="cruces-3"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
           </div>
         </div>
       </div>
