mejora de pagina

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                   <a class="nav-link active" aria-current="page" href="pages/3ra.html">Sub-17 división</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="pages/sub-15.html">Sub-15 división</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/4ta.html">Sub-13 división</a>
                 </li>
                 <li class="nav-item">
