--- a/pages/primera.html
+++ b/pages/primera.html
@@ -19,7 +19,7 @@
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Categorías</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -34,10 +34,13 @@
                     <a class="nav-link active" aria-current="page" href="sub-23.html">Sub-23</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="3ra.html">Sub-17 división</a>
+                    <a class="nav-link active" aria-current="page" href="sub-17.html">Sub-17 división</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="4ta.html">Sub-13 división</a>
+                    <a class="nav-link active" aria-current="page" href="sub-15.html">Sub-15 división</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="sub-13.html">Sub-13 división</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="6ta.html">6ta división</a>
