--- a/pages/sub-15.html
+++ b/pages/sub-15.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/0Yo_3it7_400x400-ConvertImage.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>7ma división</title>
+    <title>Sub-15</title>
 </head>
 <body>
      <!-- Menu desplegable -->
      <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">7ma división</a>
+          <a class="navbar-brand" href="#">SUB-15</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -58,7 +58,7 @@
       </nav>
       
       <div class="caja">
-        <h4>7MA DIVISIÓN</h4>
+        <h4>SUB-15</h4>
       </div>
       <div class="sub-caja">  
         <img class="caja-img" src="../img/img.png" alt="">
@@ -93,7 +93,7 @@
           </tr>
           <tr>
             <th class="pos-2-">2</th>
-            <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
+            <th><img class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">Policial</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -105,7 +105,7 @@
           </tr>
           <tr>
             <th class="pos-3">3</th>
-            <th><img class="img-tabla" src="../img/Club-Deportivo-America.png" alt="">America</th>
+            <th><img class="img-tabla" src="../img/Club-Atletico-Estudiantes.png" alt="">Estudiantes</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -117,7 +117,7 @@
           </tr>
           <tr>
             <th class="pos-4">4</th>
-            <th><img class="img-tabla" src="../img/Club-Deportivo-Cosmos.png" alt="">Cosmos</th>
+            <th><img class="img-tabla" src="../img/Club-Deportivo-America.png" alt="">America</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -129,7 +129,7 @@
           </tr>
           <tr>
             <th>5</th>
-            <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Federacion.png" alt="">Social</th>
+            <th><img class="img-tabla" src="../img/Club-Deportivo-Cosmos.png" alt="">Cosmos</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -141,7 +141,7 @@
           </tr>
           <tr>
             <th>6</th>
-            <th><img class="img-tabla" src="..." alt="">...</th>
+            <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Federacion.png" alt="">Social</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -153,7 +153,7 @@
           </tr>
           <tr>
             <th>7</th>
-            <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Almafuerte.png" alt="">Almafuerte</th>
+            <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -171,7 +171,7 @@
               <th><img class="img-tabla" src="..." alt="">Almirante</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
-              <th><img class="img-tabla" src="..." alt="">...</th>
+              <th><img class="img-tabla" src="../img/Club-Atletico-Estudiantes.png" alt="">Estudiantes</th>
               <th>-cancha-</th>
             </tr>
             <tr>
@@ -179,7 +179,7 @@
               <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Federacion.png" alt="">Social</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
-              <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
+              <th><img class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">Policial</th>
               <th>-cancha-</th>
             </tr>
             <tr>
@@ -193,7 +193,7 @@
           </table>
           <table class="equipo-libre">
             <tr>
-              <th>Libre <img  class="img-tabla" src="../img/Club-Social-y-Deportivo-Almafuerte.png" alt="">  Almafuerte</th>
+              <th>Libre <img  class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">  Academia</th>
             </tr>
           </table>
         </div>
@@ -234,7 +234,7 @@
             </tr>
             <tr>
               <th>5</th>
-              <th><img class="img-tabla" src="../img/Club-Social-y-Deportivo-Almafuerte.png" alt="">rifmc</th>
+              <th><img class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">rifmc</th>
               <th>3</th>
             </tr>
           </table>
