mejora de pagina

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </nav>
       <!-- Seccion de imagenes -->
-      <div id="carouselExample" class="carousel slide" style="margin-top: 70px;">
+      <!-- <div id="carouselExample" class="carousel slide" style="margin-top: 70px;">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="img-carousel" src="img/cancha-social-federacion.jpg" class="d-block" alt="...">
@@ -75,7 +75,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </div> -->
 
       <div class="escudos">
         <div class="div">
@@ -104,6 +104,9 @@
         </div>
         <div class="div">
           <img src="img/Club-Social-y-Deportivo-Federacion.png" alt="">
+        </div>
+        <div class="div">
+          <img src="img/Almirante Brown Federacion.png" alt="">
         </div>
       </div>
  
