--- a/pages/sub-15.html
+++ b/pages/sub-15.html
@@ -81,7 +81,7 @@
           </tr>
           <tr>
             <th class="pos-1-">1</th>
-            <th><img class="img-tabla" src="..." alt="">Almirante</th>
+            <th><img class="img-tabla" src="../img/Almirante Brown Federacion.png" alt="">Almirante</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -168,7 +168,7 @@
           <table class="tabla">
             <tr>
               <th>14:00</th>
-              <th><img class="img-tabla" src="..." alt="">Almirante</th>
+              <th><img class="img-tabla" src="../img/Almirante Brown Federacion.png" alt="">Almirante</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
               <th><img class="img-tabla" src="../img/Club-Atletico-Estudiantes.png" alt="">Estudiantes</th>
