--- a/pages/primera.html
+++ b/pages/primera.html
@@ -81,7 +81,7 @@
           </tr>
           <tr>
             <th class="pos-1">1</th>
-            <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
+            <th><img class="img-tabla" src="../img/Almirante Brown Federacion.png" alt="">Almirante</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -200,7 +200,7 @@
             </tr>
             <tr>
               <th>14:00</th>
-              <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
+              <th><img class="img-tabla" src="../img/Almirante Brown Federacion.png" alt="">Almirante</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
               <th><img class="img-tabla" src="../img/Club-Deportivo-Colonia-Alemana.png" alt="">Col. Alemana</th>
