mejora de pagina

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
  
       <footer>
         <div class="div-pie">
-        <p class="pie-pagina">Contactanos por nuestras redes</p> <a href=""><img class="fot" src="../img/whatsapp-1.jpg" alt=""></a><a href=""><img class="fot" src="../img/Facebook-Logo-Square-768x768-1.png" alt=""></a><a href=""><img  class="fot" src="../img/new-instagram-logo-png-transparent-light.png" alt=""></a>
+        <p class="pie-pagina">Contactanos por nuestras redes</p> <a href=""><img class="fot" src="img/whatsapp-1.jpg" alt=""></a><a href=""><img class="fot" src="img/Facebook-Logo-Square-768x768-1.png" alt=""></a><a href=""><img  class="fot" src="img/new-instagram-logo-png-transparent-light.png" alt=""></a>
       </div>
       <div>
         <span class="copyright">Todos Los Derechos Reservados © 2023 ADN</span>
