mejora de pagina

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
         <div class="div">
           <img src="img/Almirante Brown Federacion.png" alt="">
         </div>
+        <div class="div">
+          <img src="img/Escuela-de-Futbol-Los-Pumitas.png" alt="">
+        </div>
       </div>
  
       <footer>
