--- a/pages/6ta.html
+++ b/pages/6ta.html
@@ -153,7 +153,7 @@
           </tr>
           <tr>
             <th>7</th>
-            <th><img class="img-tabla" src="..." alt="">...</th>
+            <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -207,7 +207,7 @@
               <th><img class="img-tabla" src="../img/Academia-de-Futbol-Federaense.png" alt="">Academia</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
-              <th><img class="img-tabla" src="..." alt="">...</th>
+              <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
               <th>-cancha-</th>
             </tr>
           </table>
