--- a/pages/primera.html
+++ b/pages/primera.html
@@ -60,9 +60,9 @@
       <div class="caja">
         <h4>PRIMERA DIVISIÓN</h4>
       </div>
-      <div class="sub-caja">  
+      <div class="sub-caja">
+        <h6 style="margin-left: 5px;">(Campeón)</h6>  
         <img class="caja-img" src="../img/img.png" alt="">
-        <h6>(Campeón)</h6>
       </div>
       <div class="conteiner">
         <div>
@@ -230,15 +230,18 @@
           </table>
         </div>
 
+        <!-- Cuartos de final -->
         <div class="conteiner-tabla">
           <div>
             <div class="cruces"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
             <div class="cruces-caja"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
           </div> <div><div class="conector"></div><div class="conector-3"></div></div>   <div><div class="conector-2"></div> <div class="conector-4"></div></div>
+          <!-- Semifinal -->
           <div>
             <div class="cruces-2"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
             <div class="cruces-caja-2"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>  
           </div> <div class="conector-5"></div> <div class="conector-6"></div>
+          <!-- Final -->
           <div> 
             <div class="cruces-3"><img class="img-cruce" src="../img/img.png" alt="">-<img class="img-cruce" src="../img/img.png" alt=""><div class="marcador-cruces">0 - 0</div></div>
           </div>
