--- a/pages/sub-13.html
+++ b/pages/sub-13.html
@@ -153,7 +153,7 @@
           </tr>
           <tr>
             <th>7</th>
-            <th><img class="img-tabla" src="..." alt="">...</th>
+            <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -231,7 +231,7 @@
               <th><img class="img-tabla" src="../img/Club-Policial-Federacion.png" alt="">Policial</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
-              <th><img class="img-tabla" src="..." alt="">...</th>
+              <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
               <th>-cancha-</th>
             </tr>
             <tr>
