--- a/pages/7ma.html
+++ b/pages/7ma.html
@@ -141,7 +141,7 @@
           </tr>
           <tr>
             <th>6</th>
-            <th><img class="img-tabla" src="..." alt="">...</th>
+            <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
             <th>4</th>
             <th>PG</th>
             <th>PE</th>
@@ -171,7 +171,7 @@
               <th><img class="img-tabla" src="../img/Almirante Brown Federacion.png" alt="">Almirante</th>
               <th class="marcador">0</th>
               <th class="marcador">0</th>
-              <th><img class="img-tabla" src="..." alt="">...</th>
+              <th><img class="img-tabla" src="../img/Escuela-de-Futbol-Los-Pumitas.png" alt="">Pumas</th>
               <th>-cancha-</th>
             </tr>
             <tr>
