mejora de pagina

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              <img class="img-adn" src="img/IMG-20230604-WA0020.jpg" alt="">
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
+            <div class="offcanvas-body" style="flex-grow: revert">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/Primera.html">Primera División</a>
@@ -32,13 +32,13 @@
                   <a class="nav-link active" aria-current="page" href="pages/sub-23.html">Sub-23</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="pages/3ra.html">Sub-17 división</a>
+                  <a class="nav-link active" aria-current="page" href="pages/sub-17.html">Sub-17 división</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/sub-15.html">Sub-15 división</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="pages/4ta.html">Sub-13 división</a>
+                  <a class="nav-link active" aria-current="page" href="pages/sub-13.html">Sub-13 división</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/6ta.html">6ta división</a>
@@ -49,6 +49,19 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="pages/femenino.html">Femenino</a>
                 </li>
+              </ul>
+            </div>
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Torneo Preparación</h5>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="pages/Preparacion.html">Torneo Preparación</a>
+                  </li>
               </ul>
             </div>
           </div>
