--- a/pages/sub-15.html
+++ b/pages/sub-15.html
@@ -22,7 +22,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Categorías</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
+            <div class="offcanvas-body" style="flex-grow: revert">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
@@ -50,6 +50,19 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="femenino.html">Femenino</a>
+                  </li>
+              </ul>
+            </div>
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Torneo Preparación</h5>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="Preparacion.html">Torneo Preparación</a>
                   </li>
               </ul>
             </div>
