mejora de pagina

--- a/pages/Preparacion.html
+++ b/pages/Preparacion.html
@@ -77,7 +77,7 @@
         <h6 style="margin-left: 5px;">(Campeón)</h6>  
         <img class="caja-img" src="../img/img.png" alt="">
       </div>
-      <div class="conteiner">
+      <div class="conteiner" style="margin-bottom: 100px;">
         <div>
         <table class="tabla">
           <tr class="encabezado">
